Added feature flags component to src/components
Started working on the demo app but I need to publish to npm first

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<feature-flags [features]="features"></feature-flags>
 <h1>
-  {{title}}
+  <span *ngIf="!featureFlagsService.getFeatureStatus('Change Title')">{{title}}</span>
+  <span *ngIf="featureFlagsService.getFeatureStatus('Change Title')">Feature Flag Title</span>
 </h1>
